<resources>
    <string name="alert_cant_open_title">Can\'t open app</string>
    <string name="alert_cant_open_message">Want to change its settings?</string>
    <string name="toast_cant_open_message">Open settings to choose an action for this gesture</string>
    <string name="snackbar_cant_open_message">The gesture %1$s has no assigned action</string>
    <string name="snackbar_cant_open_message_button">Choose</string>
    <string name="settings_title">Settings</string>
    <string name="settings_tab_actions">Actions</string>
    <string name="settings_tab_launcher">Daemon launcher</string>
    <string name="settings_tab_widgets">Widgets</string>
    <string name="settings_tab_animations">Animations</string>
    <string name="settings_tab_meta">Meta</string>
    <string name="settings_general">General</string>
    <string name="settings_gesture_back">Back</string>
    <string name="settings_gesture_description_back">Back button / back gesture</string>
    <string name="settings_gesture_up">Up</string>
    <string name="settings_gesture_description_up">Swipe up</string>
    <string name="settings_gesture_tap_up">Tap + Up</string>
    <string name="settings_gesture_description_tap_up">Tap and swipe up</string>
    <string name="settings_gesture_double_up">Double Up</string>
    <string name="settings_gesture_description_double_up">Swipe up with two fingers</string>
    <string name="settings_gesture_down">Down</string>
    <string name="settings_gesture_description_down">Swipe down</string>
    <string name="settings_gesture_tap_down">Tap + Down</string>
    <string name="settings_gesture_description_tap_down">Tap and swipe down</string>
    <string name="settings_gesture_double_down">Double Down</string>
    <string name="settings_gesture_description_double_down">Swipe down with two fingers</string>
    <string name="settings_gesture_left">Left</string>
    <string name="settings_gesture_description_left">Swipe left</string>
    <string name="settings_gesture_tap_left">Tap + Left</string>
    <string name="settings_gesture_description_tap_left">Tap and swipe left</string>
    <string name="settings_gesture_double_left">Double Left</string>
    <string name="settings_gesture_description_double_left">Swipe left with two fingers</string>
    <string name="settings_gesture_right">Right</string>
    <string name="settings_gesture_description_right">Swipe right</string>
    <string name="settings_gesture_tap_right">Tap + Right</string>
    <string name="settings_gesture_description_tap_right">Tap and swipe right</string>
    <string name="settings_gesture_double_right">Double Right</string>
    <string name="settings_gesture_description_double_right">Swipe right with two fingers</string>
    <string name="settings_gesture_right_top_edge">Right (Top)</string>
    <string name="settings_gesture_description_right_top_edge">Swipe right at the top of the screen</string>
    <string name="settings_gesture_right_bottom_edge">Right (Bottom)</string>
    <string name="settings_gesture_description_right_bottom_edge">Swipe right at the bottom of the screen</string>
    <string name="settings_gesture_left_bottom_edge">Left (Bottom)</string>
    <string name="settings_gesture_description_left_bottom_edge">Swipe left at the bottom of the screen</string>
    <string name="settings_gesture_left_top_edge">Left (Top)</string>
    <string name="settings_gesture_description_left_top_edge">Swipe left at the top of the screen</string>
    <string name="settings_gesture_up_left_edge">Up (Left Edge)</string>
    <string name="settings_gesture_description_up_left_edge">Swipe up at the left edge of the screen</string>
    <string name="settings_gesture_up_right_edge">Up (Right Edge)</string>
    <string name="settings_gesture_description_up_right_edge">Swipe up at the right edge of the screen</string>
    <string name="settings_gesture_down_left_edge">Down (Left Edge)</string>
    <string name="settings_gesture_description_down_left_edge">Swipe down at the left edge of the screen</string>
    <string name="settings_gesture_down_right_edge">Down (Right Edge)</string>
    <string name="settings_gesture_description_down_right_edge">Swipe down at the right edge of the screen</string>
    <string name="settings_gesture_slash">/</string>
    <string name="settings_gesture_description_slash">Top right -> bottom left</string>
    <string name="settings_gesture_slash_reverse">/ (Reverse)</string>
    <string name="settings_gesture_description_slash_reverse">Bottom left -> top right</string>
    <string name="settings_gesture_backslash">\\</string>
    <string name="settings_gesture_description_backslash">Top left -> bottom right</string>
    <string name="settings_gesture_backslash_reverse">\\ (Reverse)</string>
    <string name="settings_gesture_description_backslash_reverse">Bottom right -> top left</string>
    <string name="settings_gesture_swipe_larger"><![CDATA[>]]></string>
    <string name="settings_gesture_description_swipe_larger">Top left -> mid right -> bottom left</string>
    <string name="settings_gesture_swipe_larger_reverse"><![CDATA[> (Reverse)]]></string>
    <string name="settings_gesture_description_swipe_larger_reverse">Bottom left -> mid right -> top left</string>
    <string name="settings_gesture_swipe_smaller"><![CDATA[<]]></string>
    <string name="settings_gesture_description_swipe_smaller">Top right -> mid left -> bottom right</string>
    <string name="settings_gesture_swipe_smaller_reverse"><![CDATA[< (Reverse)]]></string>
    <string name="settings_gesture_description_swipe_smaller_reverse">Bottom right -> mid left -> top right</string>
    <string name="settings_gesture_swipe_v">V</string>
    <string name="settings_gesture_description_swipe_v">Top left -> bottom mid -> top right</string>
    <string name="settings_gesture_swipe_v_reverse">V (Reverse)</string>
    <string name="settings_gesture_description_swipe_v_reverse">Top right -> bottom mid -> top left</string>
    <string name="settings_gesture_swipe_lambda">Λ</string>
    <string name="settings_gesture_description_swipe_lambda">Bottom left -> top mid -> bottom right</string>
    <string name="settings_gesture_swipe_lambda_reverse">Λ (Reverse)</string>
    <string name="settings_gesture_description_swipe_lambda_reverse">Bottom right -> top mid -> bottom left</string>
    <string name="settings_gesture_vol_up">Volume Up Key</string>
    <string name="settings_gesture_description_vol_up">Press the volume up button</string>
    <string name="settings_gesture_vol_down">Volume Down Key</string>
    <string name="settings_gesture_description_vol_down">Press the volume down button</string>
    <string name="settings_gesture_double_click">Double Click</string>
    <string name="settings_gesture_description_double_click">Double click an empty area</string>
    <string name="settings_gesture_long_click">Long Click</string>
    <string name="settings_gesture_description_long_click">Long click an empty area</string>
    <string name="settings_gesture_date">Date</string>
    <string name="settings_gesture_description_date">Click on date</string>
    <string name="settings_gesture_time">Time</string>
    <string name="settings_gesture_description_time">Click on time</string>
    <string name="settings_widgets_widgets">Manage widgets</string>
    <string name="settings_widgets_custom_panels">Manage widget panels</string>
    <string name="settings_launcher_section_globe">App Globe</string>
    <string name="settings_globe_perspective">3D Perspective (Fisheye)</string>
    <string name="settings_globe_perspective_summary">Adds depth distortion to the globe</string>
    <string name="settings_globe_show_glow">Notification Glow</string>
    <string name="settings_globe_glow_opacity">Glow Opacity</string>
    <string name="settings_apps_choose">Choose App</string>
    <string name="settings_apps_install">Install apps</string>
    <string name="settings_apps_toast_store_not_found">Store not found</string>
    <string name="settings_launcher_section_appearance">Appearance</string>
    <string name="settings_theme_color_theme">Color theme</string>
    <string name="settings_theme_color_theme_item_default">Default</string>
    <string name="settings_theme_color_theme_item_dark">Dark</string>
    <string name="settings_theme_color_theme_item_light">Light</string>
    <string name="settings_theme_color_theme_item_green">Green</string>
    <string name="settings_theme_color_theme_item_amber">Amber</string>
    <string name="settings_theme_color_theme_item_dynamic">Dynamic</string>
    <string name="settings_theme_text_shadow">Text shadow</string>
    <string name="settings_theme_background">Background (app list and setting)</string>
    <string name="settings_theme_background_item_transparent">Transparent</string>
    <string name="settings_theme_background_item_dim">Dim</string>
    <string name="settings_theme_background_item_blur">Blur</string>
    <string name="settings_theme_background_item_solid">Solid</string>
    <string name="settings_theme_font">UI Font (App List, Settings)</string>
    <string name="settings_theme_font_item_hack" translatable="false">Hack</string>
    <string name="settings_theme_font_item_system_default">System default</string>
    <string name="settings_theme_font_item_sans_serif">Sans serif</string>
    <string name="settings_theme_font_item_serif">Serif</string>
    <string name="settings_theme_font_item_monospace">Monospace</string>
    <string name="settings_theme_font_item_serif_monospace">Serif monospace</string>
    <string name="settings_theme_font_item_space_grotesk">Space Grotesk</string>
    <string name="settings_theme_font_item_michroma">Michroma</string>
    <string name="settings_theme_monochrome_icons">Monochrome app icons</string>
    <string name="settings_theme_animations">Animations</string>
    <string name="settings_animations_master_toggle">Enable animations</string>
    <string name="settings_animations_section_directional">Directional Animations</string>
    <string name="settings_animations_swipe_up">Swipe up animation</string>
    <string name="settings_animations_swipe_down">Swipe down animation</string>
    <string name="settings_animations_swipe_left">Swipe left animation</string>
    <string name="settings_animations_swipe_right">Swipe right animation</string>
    <string name="settings_animations_other">Other gestures animation</string>
    <string name="settings_anim_item_bottom_up">Slide Up</string>
    <string name="settings_anim_item_top_down">Slide Down</string>
    <string name="settings_anim_item_left_right">Slide Right</string>
    <string name="settings_anim_item_right_left">Slide Left</string>
    <string name="settings_anim_item_fade">Fade</string>
    <string name="settings_anim_item_none">Instant (None)</string>
    <string name="settings_anim_item_tunnel">Z-Axis Warp (Tunnel)</string>
    <string name="settings_anim_item_cube">3D Cube Rotation</string>
    <string name="settings_anim_item_flip">3D Card Flip</string>
    <string name="settings_anim_item_unfold">Origami Unfold</string>
    <string name="settings_anim_item_settle">Depth Settle</string>
    <string name="settings_anim_item_crt">CRT Boot Sequence</string>
    <string name="settings_anim_item_flicker">Holo-Flicker</string>
    <string name="settings_meta_show_tutorial">View Daemon launcher Tutorial</string>
    <string name="settings_meta_reset">Reset Settings</string>
    <string name="settings_meta_view_code">View source code</string>
    <string name="settings_meta_report_bug">Report a bug</string>
    <string name="list_apps_search_hint">Search</string>
    <string name="settings">Settings</string>
    <string name="settings_meta_licenses">Open Source Licenses</string>
    <string name="select_widget_title">Choose Widget</string>
    <string name="settings_meta_view_docs">Documentation</string>
    <string name="content_description_close">Close</string>
</resources>