<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_meta_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_standard"
    android:clipToPadding="false"
    tools:context=".ui.settings.meta.SettingsFragmentMeta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">


        <Button
            android:id="@+id/settings_meta_button_view_tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_meta_show_tutorial"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/settings_meta_button_reset_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_meta_reset"
            android:textAllCaps="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/settings_meta_button_view_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_meta_view_code"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/settings_meta_button_view_docs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_meta_view_docs"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/settings_meta_button_report_bug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_meta_report_bug"
            android:textAllCaps="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/settings_meta_button_licenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_meta_licenses"
            android:textAllCaps="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/settings_meta_text_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textSize="@dimen/font_size_small"
            tools:text="v1.2.3" />

    </LinearLayout>
</ScrollView>